tests/lean/crash.lean.expected.out
crash.lean:9:17: error: invalid have-expression, expression
  H
has type
  P
but is expected to have type
  ¬P
